--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,21 +1,20 @@
 {
-    "update_url": "https://clients2.google.com/service/update2/crx",
     "name": "YouTube Anti Translate",
-    "version": "1.4.8",
+    "version": "1.5",
     "description": "A small extension to disable YT video titles autotranslation.",
     "manifest_version": 2,
     "content_scripts": [{
         "matches": ["*://*.youtube.com/*"],
-        "js": ["src/start.js"]
+        "js": ["src/background.js"]
     }],
-    "web_accessible_resources": ["src/background.js"],
     "browser_action": {
         "default_popup": "pages/popup.html"
     },
     "permissions": [
-        "storage"
+        "storage", "tabs"
     ],
     "icons": {
         "48": "icon48.png"
     }
+
 }
