--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,20 +1,31 @@
 {
-    "name": "YouTube Anti Translate",
-    "version": "1.5.7",
-    "description": "A small extension to disable YT video titles autotranslation.",
-    "manifest_version": 2,
-    "content_scripts": [{
-        "matches": ["*://*.youtube.com/*"],
-        "js": ["src/background.js"]
-    }],
-    "browser_action": {
-        "default_popup": "pages/popup.html"
-    },
-    "permissions": [
-        "storage", "tabs"
-    ],
-    "icons": {
-        "48": "icon48.png"
+  "name": "YouTube Anti Translate",
+  "version": "1.5.14",
+  "description": "A small extension to disable YT video titles autotranslation.",
+  "manifest_version": 2,
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.youtube.com/*"
+      ],
+      "js": [
+        "src/background.js"
+      ]
     }
-
+  ],
+  "browser_action": {
+    "default_popup": "pages/popup.html"
+  },
+  "permissions": [
+    "storage",
+    "tabs"
+  ],
+  "icons": {
+    "48": "icon48.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{458160b9-32eb-4f4c-87d1-89ad3bdeb9dc}"
+    }
+  }
 }
