(manifest) Add Firefox specific option to fix `chrome.storage` when ran as Temporary  extension ( `about:debugging`)  & since it is required since MV3 in FF: https://stackoverflow.com/questions/74683819/the-extension-id-is-required-in-manifest-version-3-and-above-firefox-error-in-m

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -20,5 +20,10 @@
   "host_permissions": ["*://*.youtube.com/*"],
   "icons": {
     "48": "icon48.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{1869cf16-2ba5-c82e-ef9b-1508a93857c6}" 
+    }
   }
 }
